# XLSX

./: .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: main.yml
cmake/: collect_source_code_and_resources.cmake
source/: CMakeLists.txt  XLSX.h  XLSX_OpenXLSX.h  main.cpp
source/gui/: OpenXLSXSheetModel.cpp  OpenXLSXSheetModel.h  OpenXLSXSheetViewEditor.cpp  OpenXLSXSheetViewEditor.h  OpenXLSXWorkBookModel.cpp  OpenXLSXWorkBookModel.h  OpenXLSXWorkbookViewEditor.cpp  OpenXLSXWorkbookViewEditor.h  main.cpp
source/gui/XLSXSheet/: OpenXLSXSheetModel.cpp  OpenXLSXSheetModel.h  OpenXLSXSheetViewEditor.cpp  OpenXLSXSheetViewEditor.h
source/gui/XLSXWorkbook/: OpenXLSXWorkBookModel.cpp  OpenXLSXWorkBookModel.h  OpenXLSXWorkbookViewEditor.cpp
source/kernel/OpenXLSX/: XLSX_OpenXLSX_Document.cpp  XLSX_OpenXLSX_Document.h  XLSX_OpenXLSX_Workbook.cpp  XLSX_OpenXLSX_Workbook.h  XLSX_OpenXLSX_Workheet.cpp  XLSX_OpenXLSX_Workheet.h
source/kernel/interfaces/: XLSX.h  XLSX_ICell.h  XLSX_ICellData.h  XLSX_IDocument.h  XLSX_IWorkbook.h  XLSX_IWorksheet.h
source/kernel/xlnt/: XLSX_XLNT_Document.cpp  XLSX_XLNT_Document.h  XLSX_XLNT_Workbook.cpp  XLSX_XLNT_Workbook.h  XLSX_XLNT_Worksheet.cpp  XLSX_XLNT_Worksheet.h
tests/: TestDocument.xlsx
